<resources>
    <string name="app_name">Taler Merchant PoS Terminal</string>
    <string name="app_name_short">Merchant Terminal</string>
    <string name="project_name">GNU Taler</string>

    <string name="menu_order">Orders</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>

    <string name="order_label_title">Order #%s</string>
    <!-- The first placeholder is the amount and the second the currency -->
    <string name="order_total">Total: %1$.2f %2$s</string>
    <string name="order_restart">Restart</string>
    <string name="order_undo">Undo</string>
    <string name="order_previous">Prev</string>
    <string name="order_next">Next</string>
    <string name="order_complete">Complete</string>

    <string name="config_label">Merchant Settings</string>
    <string name="config_url">Configuration URL</string>
    <string name="config_username">Username</string>
    <string name="config_password">Password</string>
    <string name="config_ok">Fetch Configuration</string>
    <string name="config_auth_error">Error: Invalid username or password</string>
    <string name="config_error_network">Error: Could not connect to configuration server</string>
    <string name="config_error_category">Error: No valid product category found</string>
    <string name="config_error_malformed">Error: The configuration JSON is malformed</string>
    <string name="config_error_currency">Error: Product %1$s has currency %2$s, but %3$s expected</string>
    <string name="config_error_product_category_id">Error: Product %1$s references unknown category ID %2$d</string>
    <string name="config_error_product_zero">Error: No valid products found</string>
    <string name="config_error_unknown">Error: Invalid Configuration</string>
    <string name="config_fetching">Fetching Configuration…</string>
    <string name="config_save_password">Remember Password</string>
    <string name="config_forget_password">Forget</string>
    <string name="config_changed">Changed to new merchant using %s</string>
    <string name="config_fetching_label">Fetching Configuration</string>
    <string name="config_docs">Please refer to <a href="https://docs.taler.net/taler-merchant-pos-terminal.html#apis-and-data-formats">the documentation</a> for the configuration format.</string>

    <string name="payment_intro_nfc">Please scan QR Code or use NFC to pay</string>
    <string name="payment_intro">Please scan QR Code to pay</string>
    <string name="payment_cancel">Cancel Payment</string>
    <string name="payment_received">Payment received</string>
    <string name="payment_back_button">Continue</string>
    <string name="payment_order_ref">Order Reference: %s</string>
    <string name="payment_process_label">Customer Payment Required</string>
    <string name="payment_canceled">Payment Canceled</string>

    <string name="history_label">Payment History</string>
    <string name="history_received_at">Received at</string>
    <string name="history_ref_no">Ref. No: %s</string>

    <string name="error_network">Network Error</string>

    <string name="toast_back_to_exit">Click BACK again to exit</string>

</resources>
