<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@+id/nav_order"
        tools:ignore="UnusedNavigation">

    <fragment
            android:id="@+id/nav_order"
            android:name="net.taler.merchantpos.order.OrderFragment"
            android:label=""
            tools:layout="@layout/fragment_order">
        <action
                android:id="@+id/action_order_to_merchantSettings"
                app:destination="@+id/nav_settings"
                app:launchSingleTop="true"
                app:popUpTo="@+id/nav_graph"
                app:popUpToInclusive="true" />
        <action
                android:id="@+id/action_order_self"
                app:destination="@+id/nav_order"
                app:popUpTo="@+id/nav_graph" />
        <action
                android:id="@+id/action_order_to_processPayment"
                app:destination="@+id/processPayment" />
    </fragment>

    <fragment
            android:id="@+id/processPayment"
            android:name="net.taler.merchantpos.payment.ProcessPaymentFragment"
            android:label="@string/payment_process_label"
            tools:layout="@layout/fragment_process_payment">
        <action
                android:id="@+id/action_processPayment_to_paymentSuccess"
                app:destination="@+id/paymentSuccess"
                app:popUpTo="@id/nav_order" />
    </fragment>

    <fragment
            android:id="@+id/nav_history"
            android:name="net.taler.merchantpos.MerchantHistory"
            android:label="@string/history_label"
            tools:layout="@layout/fragment_merchant_history" />

    <fragment
            android:id="@+id/nav_settings"
            android:name="net.taler.merchantpos.config.MerchantConfigFragment"
            android:label="@string/config_label"
            tools:layout="@layout/fragment_merchant_config">
        <action
                android:id="@+id/action_settings_to_order"
                app:destination="@+id/nav_order"
                app:launchSingleTop="true"
                app:popUpTo="@+id/nav_graph"
                app:popUpToInclusive="true" />
    </fragment>

    <fragment
            android:id="@+id/configFetcher"
            android:name="net.taler.merchantpos.config.ConfigFetcherFragment"
            android:label="@string/config_fetching_label"
            tools:layout="@layout/fragment_config_fetcher">
        <action
                android:id="@+id/action_configFetcher_to_merchantSettings"
                app:destination="@+id/nav_settings"
                app:launchSingleTop="true"
                app:popUpTo="@+id/nav_graph"
                app:popUpToInclusive="true" />
        <action
                android:id="@+id/action_configFetcher_to_order"
                app:destination="@+id/nav_order"
                app:launchSingleTop="true"
                app:popUpTo="@+id/nav_graph"
                app:popUpToInclusive="true" />
    </fragment>

    <fragment
            android:id="@+id/paymentSuccess"
            android:name="net.taler.merchantpos.payment.PaymentSuccessFragment"
            android:label="@string/payment_received"
            tools:layout="@layout/fragment_payment_success" />

    <action
            android:id="@+id/action_global_order"
            app:destination="@+id/nav_order"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_graph" />
    <action
            android:id="@+id/action_global_merchantHistory"
            app:destination="@+id/nav_history"
            app:launchSingleTop="true" />
    <action
            android:id="@+id/action_global_merchantSettings"
            app:destination="@+id/nav_settings"
            app:launchSingleTop="true" />
    <action
            android:id="@+id/action_global_configFetcher"
            app:destination="@+id/configFetcher"
            app:launchSingleTop="true" />

</navigation>
