<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        tools:context=".payment.ProcessPaymentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:id="@+id/button_cancel_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
                android:id="@+id/qrcode"
                android:layout_width="269dp"
                android:layout_height="275dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@tools:sample/backgrounds/scenic[16]" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/payment_intro_nfc"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qrcode" />

        <TextView
                android:id="@+id/text_view_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/text_view_order_reference"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="10.49 Eur" />

        <TextView
                android:id="@+id/text_view_order_reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/button_cancel_payment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_amount"
                tools:text="@string/payment_order_ref" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>